# FamilyTreeServer

./: .env.example  .gitignore  DATABASE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0ed2f44f15cb_added_cascade_delete.py  63d9dd7f58d1_добавил_поттверждение_кодов_через_почту.py  6d2b68b48507_.py  71274bcb041d_add_person_id_to_events.py  977e3c064a91_.py  a328a41a9557_.py  a37d239b5409_add_bio_column.py  a6ced910aabd_исправил_ошибку_с_стандартными_.py  ac0cf30e07bb_add_default.py  c1715d6aca0b_базавые_бд_для_системы_аккаунтов.py  c82931831974_initial.py  e7632effc48d_.py  f748e487e657_добавлены_id_во_все_таблицы.py
backend/api/: admin.py  chat.py  family.py  geocode.py  places.py  suggestions.py
backend/clients/: geocoder.py  gigachat_client.py  google_autocomplete.py  places.py
backend/core/: config.py
backend/db/: database.py  models.py  session.py  tables.py
backend/exemple/: test.ged  test.xml
backend/models/: admin.py  chat.py  family.py  geocode.py  places.py
backend/schemas/: family.py
backend/services/: chat_service.py  extract_photos.py  geocode_service.py  htpasswd_manager.py  load2db.py  places_service.py  xml_parser.py
backend/src/: main.py
backend/src/api/: __init__.py  admin.py  dependencies.py  family.py  test.py  user.py
backend/src/core/: config.py
backend/src/db/: database.py  tables.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_chat_service.py  test_db.py  test_family.py  test_geocode_service.py  test_haversine.py  test_health.py  test_load_files.py  test_places_service.py  test_utils.py
backend/utils/: categories.py  haversine.py
(+73 files in other folders)
